namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    enviornment: dev #namespace with labels


# apiVersion: v1 → Core Kubernetes API
# kind: Namespace → Defines a namespace
# metadata.name → Name of the namespace

# kubectl apply -f namespace.yaml
# kubectl get namespaces
# kubectl get pods -n my-namespace
