pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  # namespace: my-namespace #------Adding pod to particular namespace
  labels:
    app: my-app
    env: dev
spec:
  containers:
    #1st Container
    - name: my-container
      image: nginx
      ports:
        - containerPort: 80

    #2nd Container
    - name: db-container
      image: mariadb
      ports:
        - containerPort: 3306
