service-LoadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: my-loadbalancer-service
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer

# Used in cloud providers like: (AWS, Azure, GCP)

# kubectl apply -f service-LoadBalancer.yaml
# kubectl get svc
