service-NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007 # Range: 30000–32767
  type: NodePort

# http://<Node-IP>:30007

# kubectl apply -f service-NodePort.yaml
# kubectl get svc
